# replifactory

./: .gitignore  README.md  context.txt  pyproject.toml
core/: pyproject.toml
core/src/replifactory_core/: base_device.py  culture.py  experiment.py  factory.py  interfaces.py  parameters.py  protocols.py
server/: pyproject.toml  requirements.txt
server/src/replifactory_server/: create_experiment.py  database.py  database_models.py  init.py  init_db.py  models.py  monitor.py  routes.py  server.py  start_experiment.py  start_server.py
simulation/: pyproject.toml
simulation/examples/: quick_start.py  run_simulation.py
simulation/src/replifactory_simulation/: devices.py  factory.py  growth_model.py  logging.py  runner.py  simulation_factory.py
simulation/tests/: simple_test.py
tools/: gitkeep_dirs.py
ui/: index.html  serve.py
