[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replifactory-core"
version = "0.1.0"
description = "Core components for the Replifactory bacterial evolution system"
authors = [
    { name = "Replifactory Team" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/replifactory_core"]

[project.urls]
"Homepage" = "https://github.com/yourusername/replifactory"
"Bug Tracker" = "https://github.com/yourusername/replifactory/issues"
