[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replifactory-server"
version = "0.1.0"
description = "Server components for the Replifactory bacterial evolution system"
authors = [
    { name = "Replifactory Team" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-migrate>=4.0.0",
    "flask-sqlalchemy>=3.0.0",
    "waitress>=2.0.0",
    "sqlalchemy>=2.0.0",
    "replifactory-core>=0.1.0",
    "replifactory-simulation>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/replifactory_server"]

[project.urls]
"Homepage" = "https://github.com/yourusername/replifactory"
"Bug Tracker" = "https://github.com/yourusername/replifactory/issues"
