[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "replifactory-simulation"
version = "0.1.0"
description = "Simulation components for the Replifactory bacterial evolution system"
authors = [
    { name = "Replifactory Team" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=2.0.0",
    "replifactory-core>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/replifactory_simulation"]

[project.urls]
"Homepage" = "https://github.com/yourusername/replifactory"
"Bug Tracker" = "https://github.com/yourusername/replifactory/issues"
